# arcana-mcp

./: .gitignore  .mcp.json  README.md  pyproject.toml  settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/arcana/absorb/: SKILL.md
.github/workflows/: ci.yml  publish.yml
agents/: arcana-researcher.md
commands/: search.md
docs/plans/: 2026-03-14-absorb-skill-design.md
scripts/: release.sh
skills/absorb/: SKILL.md
skills/arcana-absorb/: SKILL.md
skills/arcana-context/: SKILL.md
skills/arcana-context/context-workspace/: eval_set.json
skills/arcana-search/: SKILL.md
skills/context/: SKILL.md
skills/context/context-workspace/: eval_set.json  trigger-eval.json
src/arcana_mcp/: __init__.py  __main__.py  chunking.py  cli.py  db.py  embeddings.py  server.py
tests/: test_chunking.py  test_db.py  test_embeddings.py  test_server.py
